--- a/DoorLockSystem/res/layout/activity_main.xml
+++ b/DoorLockSystem/res/layout/activity_main.xml
@@ -18,27 +18,29 @@
         android:src="@drawable/logo" />
 
     <Button
+        android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:text="Device Manager"
-        android:onClick="turnOn" />
+        android:text="Device Manager" 
+        android:onClick="openDeviceManager" />
 
     <Button
+        android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/requestCode"
+        android:layout_below="@+id/button1"
         android:layout_centerHorizontal="true"
         android:text="Lock/Unlock"
-        android:onClick="turnOn" />
+        android:onClick="openLockUnlock" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/lockUnlock"
-        android:layout_below="@+id/deviceManager"
+        android:layout_below="@+id/button2"
+        android:layout_centerHorizontal="true"
         android:text="Request Code"
-        android:onClick="turnOn" />
-    
+        android:onClick="openRequestCode" />
+
 </RelativeLayout>
