Added another activity

--- a/DoorLockSystem/res/layout/activity_main.xml
+++ b/DoorLockSystem/res/layout/activity_main.xml
@@ -36,11 +36,21 @@
         android:onClick="openLockUnlock" />
 
     <Button
+        android:id="@+id/button3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/button2"
         android:layout_centerHorizontal="true"
         android:text="Request Code"
         android:onClick="openRequestCode" />
+
+    <ToggleButton
+        android:id="@+id/btSwitch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:text="Enable Bluetooth"
+        android:onClick="SwitchBT"/>
 
 </RelativeLayout>
